objects/OrderRequest__c.object
<CustomObject>
    <description>This object is used for WRF-POLK.</description>
    <fields>
        <fullName>AvailabilityCount__c</fullName>
        <description>This field is used for WRF-POLK.</description>
        <label>Availability Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BillTo__c</fullName>
        <label>Bill To</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>CustPostProcessing__c</fullName>
        <description>This field is used for WRF-POLK.</description>
        <label>Cust./Post Processing</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>CustomDescription__c</fullName>
        <description>This field is used for WRF-POLK.</description>
        <label>Custom Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CutbackOptions__c</fullName>
        <description>This field is used for WRF-POLK.</description>
        <label>Cutback Options</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>DesiredCount__c</fullName>
        <description>This field is used for WRF-POLK.</description>
        <label>Desired Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FormatOrder__c</fullName>
        <description>This field is used for WRF-POLK.</description>
        <label>Output Format</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Fmt 001 - Name,C.Address,Phone</fullName>
                </value>
                <value>
                    <fullName>Fmt 011 - F.Name,Address,Phone</fullName>
                </value>
                <value>
                    <fullName>Fmt 012 - F.Name,C.Address,DMA,Vehicle Desc, Phone</fullName>
                </value>
                <value>
                    <fullName>Fmt 013 - F.Name,C.Address,Vehicle,Phone</fullName>
                </value>
                <value>
                    <fullName>Fmt 014 - F.Name,C.Address,Phone</fullName>
                </value>
                <value>
                    <fullName>Fmt 015 - F.Name,C.Address</fullName>
                </value>
                <value>
                    <fullName>Fmt 017 - C.Name,C.Address</fullName>
                </value>
                <value>
                    <fullName>Fmt 018 - F.Name,C.Address,Vehicle</fullName>
                </value>
                <value>
                    <fullName>Fmt 021 - Fmt 13 w/o vehicle - w/o phone</fullName>
                </value>
                <value>
                    <fullName>Fmt 026 - Fmt 13 w/o vehicle - with phone</fullName>
                </value>
                <value>
                    <fullName>Custom</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>IsApproved__c</fullName>
        <formula>If( OR(ISPICKVAL( OrderRequestStatus__c ,&apos;Approved&apos;),ISPICKVAL( OrderRequestStatus__c ,&apos;Approved without Job&apos;)),true,false )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Approved</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>JobQueryID__c</fullName>
        <description>This field is used for WRF-POLK.</description>
        <label>Job#/Query ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>KeyfieldCode__c</fullName>
        <description>This field is used for WRF-POLK.</description>
        <label>Keyfield/Code</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>LegacyIDUnique__c</fullName>
        <description>SFDC1-7046: Legacy ID Unique field is a concatenation of the source system name and a source system record id to ensure record is uniquely identified.</description>
        <externalId>true</externalId>
        <inlineHelpText>This field store the concatenation of the source system name and a source system record id to ensure the record is uniquely identified.</inlineHelpText>
        <label>LegacyIDUnique</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>LegacyID__c</fullName>
        <description>This field is used for data integration to store legacy system id in WRF POLK application.</description>
        <externalId>true</externalId>
        <inlineHelpText>This field is used for data integration to store legacy system id in WRF POLK application.</inlineHelpText>
        <label>LegacyID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LegacyReference__c</fullName>
        <description>SFDC1-7046: Legacy Reference field is a friendly system reference to the source record.</description>
        <externalId>true</externalId>
        <inlineHelpText>This is a friendly system reference to the source record.</inlineHelpText>
        <label>LegacyReference</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LegacySystem__c</fullName>
        <description>SFDC1-7046: Legacy System field is a picklist that represents the original system the record came from.</description>
        <inlineHelpText>Name of the CRM system the source record came from</inlineHelpText>
        <label>LegacySystem</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>LegacySystem</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>NegotiatedDate__c</fullName>
        <label>Negotiated Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>OrderRequestAttachements__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is used for WRF-POLK.</description>
        <label>Order Request Attachments</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OrderRequestDetails__c</fullName>
        <formula>BR()+&apos;Work Request Form: &apos; + WorkRequestForm__r.Name +BR()+
&apos;Submitted Date/Time: &apos;+ TEXT(SubmittedDateTime__c) +BR()+
&apos;Owner: &apos;+ Owner__c +BR()+
&apos;Job#/Query ID: &apos; +JobQueryID__c +BR()+
&apos;Pre-Sort: &apos; +  TEXT(PreSort__c) +BR()+
&apos;Post-Sort: &apos; +  TEXT(PostSort__c) +BR()+
&apos;Order Request Status: &apos; + TEXT(OrderRequestStatus__c) +BR()+
&apos;Order Requested Date: &apos; + TEXT(OrderRequestedDate__c) +BR()+
&apos;Order Request Attachments: &apos;+ If(OrderRequestAttachements__c,&apos;True&apos;,&apos;False&apos;) +BR()+
&apos;Output Format: &apos; + TEXT( FormatOrder__c ) +BR()+
&apos;Bill To: &apos; + BillTo__c +BR()+
&apos;Ship To: &apos; + ShipTo__c +BR()+
&apos;Production Resource: &apos; + ProductionResource__r.FullName__c +BR()+
&apos;Requestor: &apos; + Requestor__r.FullName__c +BR()+ 
&apos;Programmer: &apos;+ Programmer__r.FullName__c +BR()+
&apos;Programmers Team: &apos;+ TEXT(Team1__c) +BR()+
&apos;PLC Job: &apos; + PLCJob__r.Name +BR()+
&apos;Negotiated Date: &apos;+ TEXT(NegotiatedDate__c) +BR()+
&apos;Production Comments: &apos;+ ProductionComments__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Order Request Details</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OrderRequestStatus__c</fullName>
        <label>Order Request Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Draft</fullName>
                    <default>true</default>
                    <label>Draft</label>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
                <value>
                    <fullName>Submitted</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Approved without Job</fullName>
                </value>
                <value>
                    <fullName>Approval Pending</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>OrderRequestedDate__c</fullName>
        <label>Order Requested Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Owner__c</fullName>
        <formula>If( BEGINS(Owner:User.Id, &apos;005&apos;) ,HYPERLINK(&quot;/&quot; &amp;OwnerId, Owner:User.FirstName +&apos; &apos;+ Owner:User.LastName,&apos;_self&apos;),
HYPERLINK(&quot;/lightning/setup/Queues/page?address=%2Fp%2Fown%2FQueue%2Fd%3Fid%3D&quot; &amp; Owner:Queue.Id , Owner:Queue.QueueName,&apos;_self&apos; ))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Owner</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PLCJob__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field is used for WRF-POLK.</description>
        <label>PLC Job</label>
        <referenceTo>PLCJob__c</referenceTo>
        <relationshipLabel>Order Requests</relationshipLabel>
        <relationshipName>OrderRequests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PLCStartDate__c</fullName>
        <inlineHelpText>Start of PLC Job, to be auto populated to PLC on Approval</inlineHelpText>
        <label>PLC Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PostSortDecription__c</fullName>
        <description>This field is used for WRF-POLK.</description>
        <label>Post-Sort Decription</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>PostSort__c</fullName>
        <description>This field is used for WRF-POLK.</description>
        <label>Post-Sort</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Ascending</fullName>
                </value>
                <value>
                    <fullName>Descending</fullName>
                </value>
                <value>
                    <fullName>Combo</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PreSortDescription__c</fullName>
        <description>This field is used for WRF-POLK.</description>
        <label>Pre-Sort Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>PreSort__c</fullName>
        <description>This field is used for WRF-POLK.</description>
        <label>Pre-Sort</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Ascending</fullName>
                </value>
                <value>
                    <fullName>Descending</fullName>
                </value>
                <value>
                    <fullName>Combo</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ProductionComments__c</fullName>
        <description>This field is used for WRF-POLK.</description>
        <label>Production Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ProductionResource__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Production Resource</label>
        <referenceTo>User</referenceTo>
        <relationshipName>OrderRequests2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Programmer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field is used for WRF-POLK.</description>
        <label>Programmer</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Order_Requests1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Requestor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field is used for WRF-POLK.</description>
        <label>Requestor</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Order_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ShipTo__c</fullName>
        <label>Ship To</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>This field is used for WRF-POLK.</description>
        <label>Status</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SubmittedDateTime__c</fullName>
        <description>This field is used for WRF-POLK.</description>
        <label>Submitted Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Team1__c</fullName>
        <label>Programmer&apos;s Team</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Aftersales-Chrysler</fullName>
                </value>
                <value>
                    <fullName>APAC</fullName>
                </value>
                <value>
                    <fullName>Canada</fullName>
                </value>
                <value>
                    <fullName>ESS-Delivery</fullName>
                </value>
                <value>
                    <fullName>Forecasting</fullName>
                </value>
                <value>
                    <fullName>MCM-Analytics</fullName>
                </value>
                <value>
                    <fullName>MCM-Marketing Databases</fullName>
                </value>
                <value>
                    <fullName>MCM-Market Research</fullName>
                </value>
                <value>
                    <fullName>MCM-Target Marketing Services</fullName>
                </value>
                <value>
                    <fullName>MEL-Delivery</fullName>
                </value>
                <value>
                    <fullName>MR-Aftermarket</fullName>
                </value>
                <value>
                    <fullName>MR-Commercial</fullName>
                </value>
                <value>
                    <fullName>MR-Loyalty</fullName>
                </value>
                <value>
                    <fullName>MR-Market Reporting BI</fullName>
                </value>
                <value>
                    <fullName>MR-Network Management</fullName>
                </value>
                <value>
                    <fullName>Planning Solutions</fullName>
                </value>
                <value>
                    <fullName>PolkConnect Analytics</fullName>
                </value>
                <value>
                    <fullName>PolkConnect System</fullName>
                </value>
                <value>
                    <fullName>VIN-Recall</fullName>
                </value>
                <value>
                    <fullName>VIN-VIN Decoders</fullName>
                </value>
                <value>
                    <fullName>VIN-VVS</fullName>
                </value>
                <value>
                    <fullName>Visualization Team</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>WorkRequestForm__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field is used for WRF-POLK.</description>
        <label>Work Request Form</label>
        <referenceTo>WorkRequestForm__c</referenceTo>
        <relationshipLabel>Order Requests</relationshipLabel>
        <relationshipName>Order_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Order Request</label>
    <listViews>
        <fullName>JeffAllen_OrderRequest</fullName>
        <filterScope>Queue</filterScope>
        <label>Jeff Allen</label>
        <queue>JeffAllen</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>MCMAnalytics_OrderRequest</fullName>
        <filterScope>Queue</filterScope>
        <label>PAS</label>
        <queue>MCMAnalytics</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>MarketReportingAnalytics_OrderRequest</fullName>
        <filterScope>Queue</filterScope>
        <label>Analytics</label>
        <queue>MarketReportingAnalytics</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>MarketReportingCAP_OrderRequest</fullName>
        <filterScope>Queue</filterScope>
        <label>Market Reporting - CAP</label>
        <queue>MarketReportingCAP</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>MarketReportingLoyalty_OrderRequest</fullName>
        <filterScope>Queue</filterScope>
        <label>Market Reporting - Loyalty</label>
        <queue>MarketReportingLoyalty</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>MarketReportingOEMStat_OrderRequest</fullName>
        <filterScope>Queue</filterScope>
        <label>Market Reporting - OEM Stat</label>
        <queue>MarketReportingOEMStat</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>PlanningSolutions_OrderRequest</fullName>
        <filterScope>Queue</filterScope>
        <label>Planning Solutions</label>
        <queue>PlanningSolutions</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>VINtelligenceRecall_OrderRequest</fullName>
        <filterScope>Queue</filterScope>
        <label>Recall</label>
        <queue>VINtelligenceRecall</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>VINtelligenceSWS_OrderRequest</fullName>
        <filterScope>Queue</filterScope>
        <label>VIN Solutions</label>
        <queue>VINtelligenceSWS</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <nameField>
        <displayFormat>OR-{000000}</displayFormat>
        <label>Order Request Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Order Requests</pluralLabel>
    <recordTypes>
        <fullName>OrderRequest</fullName>
        <active>true</active>
        <label>Order Request</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>ApprovalPendingNottoSubmitted</fullName>
        <active>true</active>
        <errorConditionFormula>If(OR( $Setup.SystemMutedValidationRules__c.OrderRequest__c, $Setup.SystemMutedValidationRules__c.All__c ), False,AND($Permission.WRApprover,
ISPICKVAL(PRIORVALUE(OrderRequestStatus__c), &apos;Approval Pending&apos;),
OR(ISPICKVAL(OrderRequestStatus__c,&apos;Submitted&apos;),
ISPICKVAL(OrderRequestStatus__c,&apos;Draft&apos;)
)
)
)</errorConditionFormula>
        <errorMessage>Approval Pending can&apos;t be moved to submitted or to Draft.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ErrorForApprovedStatusFromRejected</fullName>
        <active>true</active>
        <description>Error when draft or rejected is moved to Approval Pending</description>
        <errorConditionFormula>If(OR( $Setup.SystemMutedValidationRules__c.OrderRequest__c, $Setup.SystemMutedValidationRules__c.All__c ), False,AND($Permission.WRApprover,
OR(ISPICKVAL(OrderRequestStatus__c,&apos;Approved&apos;),ISPICKVAL(OrderRequestStatus__c,&apos;Approval Pending&apos;), ISPICKVAL(OrderRequestStatus__c,&apos;Approved without Job&apos;) ),
ISPICKVAL(PRIORVALUE(OrderRequestStatus__c), &apos;Rejected&apos;)))</errorConditionFormula>
        <errorMessage>Status can&apos;t be moved to Approved or Approved without Job from Rejected.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ErrorForNonApprovers</fullName>
        <active>true</active>
        <errorConditionFormula>If(OR( $Setup.SystemMutedValidationRules__c.OrderRequest__c, $Setup.SystemMutedValidationRules__c.All__c ), False,AND(NOT($Permission.WRApprover) ,
OR(
AND(
ISPICKVAL(PRIORVALUE(OrderRequestStatus__c), &apos;Draft&apos;) ,
OR(ISPICKVAL(OrderRequestStatus__c,&apos;Rejected&apos;),
ISPICKVAL(OrderRequestStatus__c,&apos;Approved&apos;),
ISPICKVAL(OrderRequestStatus__c,&apos;Approved without Job&apos;),
ISPICKVAL(OrderRequestStatus__c,&apos;Approval Pending&apos;)
)
),
AND(
ISPICKVAL(PRIORVALUE(OrderRequestStatus__c), &apos;Submitted&apos;) ,
OR(ISPICKVAL(OrderRequestStatus__c,&apos;Rejected&apos;),
ISPICKVAL(OrderRequestStatus__c,&apos;Approved&apos;),
ISPICKVAL(OrderRequestStatus__c,&apos;Approved without Job&apos;),
ISPICKVAL(OrderRequestStatus__c,&apos;Approval Pending&apos;)
)
),
AND(
ISPICKVAL(PRIORVALUE(OrderRequestStatus__c), &apos;Approval Pending&apos;) ,
OR(ISPICKVAL(OrderRequestStatus__c,&apos;Rejected&apos;),
ISPICKVAL(OrderRequestStatus__c,&apos;Approved&apos;),
ISPICKVAL(OrderRequestStatus__c,&apos;Approved without Job&apos;),
ISPICKVAL(OrderRequestStatus__c,&apos;Submitted&apos;),
ISPICKVAL(OrderRequestStatus__c,&apos;Draft&apos;)
)
)
)
)
)</errorConditionFormula>
        <errorMessage>You are not authorized to make this change as you are not an approver.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>NewRecordStatusDraftOrSubmitted</fullName>
        <active>true</active>
        <errorConditionFormula>If(OR( $Setup.SystemMutedValidationRules__c.OrderRequest__c, $Setup.SystemMutedValidationRules__c.All__c ), False,ISBLANK(Id) &amp;&amp; OR (ISPICKVAL( OrderRequestStatus__c ,&apos;Rejected&apos;),
ISPICKVAL(OrderRequestStatus__c,&apos;Approved&apos;),
ISPICKVAL(OrderRequestStatus__c,&apos;Approved without Job&apos;),
ISPICKVAL(OrderRequestStatus__c,&apos;Approval Pending&apos;)))</errorConditionFormula>
        <errorMessage>You are not authorized to change to this Request Status.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>OrderRequeststatustoSubmitfromDraft</fullName>
        <active>true</active>
        <errorConditionFormula>If(OR( $Setup.SystemMutedValidationRules__c.OrderRequest__c, $Setup.SystemMutedValidationRules__c.All__c ), False,ISPICKVAL(PRIORVALUE(OrderRequestStatus__c), &apos;Draft&apos;) &amp;&amp; OR(ISPICKVAL(OrderRequestStatus__c,&apos;Rejected&apos;),
ISPICKVAL(OrderRequestStatus__c,&apos;Approved&apos;),
ISPICKVAL(OrderRequestStatus__c,&apos;Approved without Job&apos;),
ISPICKVAL(OrderRequestStatus__c,&apos;Approval Pending&apos;)
) &amp;&amp; $Permission.WRApprover)</errorConditionFormula>
        <errorMessage>Please move the Order Request Status to Submitted.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>RejectedLogtoSubmitOrDraft</fullName>
        <active>true</active>
        <errorConditionFormula>If(OR( $Setup.SystemMutedValidationRules__c.OrderRequest__c, $Setup.SystemMutedValidationRules__c.All__c ), False,AND(ISPICKVAL(PRIORVALUE(OrderRequestStatus__c),&apos;Rejected&apos;),
ISPICKVAL(OrderRequestStatus__c,&apos;Approved&apos;),
ISPICKVAL(OrderRequestStatus__c,&apos;Approved without Job&apos;),
ISPICKVAL(OrderRequestStatus__c,&apos;Approval Pending&apos;)))</errorConditionFormula>
        <errorMessage>Please update the status to Submitted or Draft from Rejected.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>SubmittedRecordtoDraft</fullName>
        <active>true</active>
        <errorConditionFormula>If(OR( $Setup.SystemMutedValidationRules__c.OrderRequest__c, $Setup.SystemMutedValidationRules__c.All__c ), False,ISPICKVAL( OrderRequestStatus__c ,&apos;Draft&apos;) &amp;&amp;
ISPICKVAL( PRIORVALUE(OrderRequestStatus__c) ,&apos;Submitted&apos;))</errorConditionFormula>
        <errorMessage>Order Request can&apos;t be moved back to Draft.</errorMessage>
    </validationRules>
</CustomObject>